--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.12.4",
-    "hbs": "~2.9.0",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "body-parser": "1.12.4",
+    "cookie-parser": "1.3.5",
+    "debug": "2.2.0",
+    "express": "4.12.4",
+    "hbs": "2.9.0",
+    "morgan": "1.5.3",
+    "serve-favicon": "2.2.1"
   }
 }
