--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "express": "4.12.4",
     "hbs": "2.9.0",
     "morgan": "1.5.3",
+    "retry": "0.10.1",
     "serve-favicon": "2.2.1"
   }
 }
