--- a/event-adder/package.json
+++ b/event-adder/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nats": "0.6.8"
+    "nats": "0.6.8",
+    "redis": "2.6.3"
   }
 }
