Add node exporter

--- a/jigsaw-puzzle-pieces/prometheus.yml
+++ b/jigsaw-puzzle-pieces/prometheus.yml
@@ -27,6 +27,12 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
+  - job_name: 'nodes'
+    static_configs:
+      - targets: ['localhost:9100']
+        labels:
+          group: 'production'
+
   - job_name: 'microservices'
     static_configs:
       - targets: ['localhost:4000']
